fix: eliminate unecessary grid column spacing

--- a/src/app/home/styles/expertises/_panels.scss
+++ b/src/app/home/styles/expertises/_panels.scss
@@ -14,6 +14,15 @@
     > .cds--css-grid-column {
       margin: 0;
     }
+
+    // Overrides ".enj-gridSys" margin-top feature
+    @include core.breakpoint('md') {  
+      .enj-gridSys__cols-wrapper { 
+        .cds--css-grid-column:nth-of-type(2) { 
+          margin-top: 0;
+        }
+      }
+    }  
   }
 
 
